src/test/testFiles/valid/binaryTreeValid.val
let left = Node<number>(3);
let right = Node<number>(4);
let root = Node<number>(3);