src/test/testFiles/invalid/semanticErrors/binaryTreeInvalidValueAssignment.val
let r = Node<number>(3);

r.right.value = true;